# HoleFilling

./: .gitignore  README.md
MeshHoleFiller/: CMakeLists.txt  HoleFiller.cpp  HoleFiller.h  main.cpp
MeshHoleFiller/openmesh/lib/: libOpenMeshCore.so.9.0  libOpenMeshTools.so.9.0
MeshHoleFiller/openmesh/share/OpenMesh/cmake/: OpenMeshConfig-release.cmake
MeshHoleFiller/test/: bunnyhole_c0_idminareamaxdiheral_out.off  bunnyhole_c1_idminareamaxdiheral_out.off  bunnyhole_out.off  hemisphere_c0_idminareamaxdiheral_out.off  hemisphere_c1_idminareamaxdiheral_out.off  hemisphere_c2_idminareamaxdiheral_out.off
hole_fixer/: CMakeLists.txt  main.cpp
